# ai_autodev_coreutils

./: .gitignore  AI_GUIDE.md  NORTH_STAR.md  README.md  pyproject.toml
.hermes/creative_daemon/workspace/: symbolic_math.py
.hermes/creative_daemon/workspace/ci_20260426_135600_python/: dns_resolver.py
autodev/: __init__.py  cli.py  creative_loop.py  executor.py  memory.py  models.py  seed_generator.py
autodev_coreutils/: __init__.py  adapters.py  cli.py  context_pack.py  contract.py  decide.py  discover.py  flow.py  snapshot.py  task_split.py  verify.py  watchdog.py
carry_forward/: __init__.py  api_slot_settings.txt  carry_forward.py
carry_forward/tests/: conftest.py
model_choice/: __init__.py  backends.py  cache.py  config.py  fallback.py  ollama.py  rate_limiter.py  templates.py
possibilities/: __init__.py  __main__.py  cli.py  context.py  dedup.py  escalate.py  explorer.py  llm.py  merge.py  models.py  prompts.py  render.py  scorer.py
possibilities/tests/: test_cli.py  test_context.py  test_dedup.py  test_escalate.py  test_explorer.py  test_llm.py  test_merge.py  test_models.py  test_render.py  test_scorer.py  test_scorer_extra.py
recursive_feedback_loop/: build.py
roadmap_builder/: TASKS_GUIDE.md  __init__.py  cli.py  geometry_os_roadmap.json  geometry_os_roadmap.md  geometry_os_roadmap.yaml  markdown_parser.py  models.py  parser.py  pyproject.toml  renderer.py
tests/: test_adapters.py  test_contract.py  test_decide.py  test_discover.py  test_snapshot.py  test_task_split.py
zion/projects/agent-orchestration/: ROADMAP.md  config_watcher.py  conflict_detector.py  context_budget.py  context_config.yaml  cost_tracker.py  cron_prompt.md  dag.py  execution_log.py  executor.py  garbage_collector.py  health_monitor.py  invariant_checker.py  invariants.yaml  merge_queue.py  metrics.py  onboard.py  orch_history.py  orchestrator.py  orchestrator.yaml  poller.py  pr_automation.py  review_sensor.py  roadmap.yaml  roles.py  safety.py  self_doc.py  self_improve.py  spawner.py  status.sh  test_config_watcher.py  test_conflict_detector.py  test_context_budget.py  test_dag.py  test_e2e_lifecycle.py  test_executor.py  test_gc.py  test_health_monitor.py  test_integration.py  test_integration_chain.py  (+11 more)
zion/projects/agent-orchestration/pipelines/: debug-pipeline.yaml  fail-test.yaml  gc-pipeline.yaml  review-pipeline.yaml  standard-pipeline.yaml  team-pipeline.yaml  test-pipeline.yaml  workspace-lifecycle-pipeline.yaml
zion/projects/agent-orchestration/roles/: coordinator.yaml  implementer.yaml  reviewer.yaml  tester.yaml
zion/projects/autodev_coreutils/scripts/: deploy_geo_scripts.sh
zion/projects/autodev_coreutils/scripts/geo/: geo_daily_digest.py  geo_desktop_alive.py  geo_dogfood_qa.py  geo_event_log.py  geo_failure_stats.py  geo_issues_preflight.py  geo_reviewer_preflight.py  geo_watchdog.py  oracle_preflight.py  terminal_qa.py
zion/projects/geometry_os/geometry_os/src/: asm.rs  debug.rs  lib.rs  logic.rs  vm.rs
zion/projects/geometry_os/geometry_os/tests/: integration.rs
