[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autodev_coreutils"
version = "0.1.0"
description = "Linux coreutils for AI development automation -- small composable CLI tools"
requires-python = ">=3.10"
dependencies = [
    "model_choice",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "mypy>=1.8"]

[project.scripts]
# Each coreutil is its own command
autodev-task-split = "autodev_coreutils.task_split:main"
autodev-context-pack = "autodev_coreutils.context_pack:main"
autodev-verify = "autodev_coreutils.verify:main"
autodev-snapshot = "autodev_coreutils.snapshot:main"
autodev-watchdog = "autodev_coreutils.watchdog:main"
# Meta command
autodev = "autodev_coreutils.cli:main"

[tool.setuptools.packages.find]
include = ["autodev_coreutils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
