[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roadmap_builder"
version = "0.1.0"
description = "Parse specs into structured engineering roadmaps. Render as Markdown, JSON, or YAML."
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "mypy>=1.8"]

[project.scripts]
roadmap = "roadmap_builder.cli:main"

[tool.setuptools.packages.find]
where = [".."]
include = ["roadmap_builder*"]
